--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,30 @@
   "name": "Focus Ledger",
   "description": "A quiet mirror for your attention. Privacy-first and local-only.",
   "version": "0.1.0",
+
   "action": {
     "default_popup": "popup/popup.html"
   },
+
   "background": {
     "service_worker": "background/serviceWorker.js"
   },
-  "permissions": ["tabs", "idle", "storage", "alarms"],
-  "host_permissions": ["<all_urls>"]
+
+  "permissions": [
+    "tabs",
+    "idle",
+    "storage",
+    "alarms"
+  ],
+
+  "host_permissions": [
+    "<all_urls>"
+  ],
+
+  "web_accessible_resources": [
+    {
+      "resources": ["dashboard/*"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
